hphp/hack/test/typecheck/global_const18.php.exp
File "global_const18.php", line 3, characters 9-14:
Invalid expression in constant initializer (Parsing[1002])
